Fixed skills icon align issues

--- a/src/Components/Portfolio/PortfolioProjects/PortfolioProjects.css
+++ b/src/Components/Portfolio/PortfolioProjects/PortfolioProjects.css
@@ -3,6 +3,10 @@
     color: black; 
 }
 
+.projBorder{
+    text-align: center; 
+}
+
 .CarouselImg {
     justify-content: center;
     height: 250px; 
